# aries-endorser-service

./: .gitignore  COMPLIANCE.yaml  MAINTAINERS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: dependabot.yml  settings.yml
bdd-tests/: Dockerfile.bdd  behave.ini  requirements.txt
bdd-tests/features/: author-connections.feature  author-dids.feature  author-endorsements.feature
bdd-tests/features/steps/: author-connections.py  author-dids.py  author-endorsements.py  util.py
docker/: db_init.sql  docker-compose.yml  manage
docker/acapy/: Dockerfile.acapy  ngrok-wait.sh
docker/caddy/: Caddyfile
docker/database/: 1-init.sh
docker/wallet/config/postgresql-start/: enable_pgcrypto.sh
endorser/: Dockerfile.endorser  docker-entrypoint.sh  requirements.txt
endorser/api/: acapy_utils.py  endorser_main.py  logging.conf  main.py
endorser/api/core/: config.py
endorser/api/db/: session.py
endorser/api/db/migrations/: README
endorser/api/db/migrations/versions/: added_details_field_for_the_allow__9a8ef028a751.py  comment_2a4561c966b1.py  comment_88a8b238970b.py  comment_8d49fe123be2.py  complete_regeneration_bc503ce16d6d.py  initial_db_tables_d925cb39480e.py  make_connection_id_unique_30a321309310.py  make_connection_id_unique_f4e857e3d8eb.py  rename_author_did_to_creddef_author_did__b1e41d72f00e.py  updated_to_support_granular__e6afa1dce289.py  updated_to_support_granular__fb66f2d55aee.py
endorser/api/db/models/: __init__.py  allow.py  base.py  configuration.py  contact.py  endorse_request.py
endorser/api/endpoints/dependencies/: db.py
endorser/api/endpoints/models/: allow.py  configurations.py  connections.py  endorse.py
endorser/api/endpoints/routes/: allow.py  connections.py  endorse.py  endorser_admin.py  endorser_api.py  reports.py  webhooks.py
endorser/api/services/: __init__.py  admin.py  allow_lists.py  auto_state_handlers.py  configurations.py  connections.py  endorse.py  webhook_handlers.py
