[tool.poetry]
name = "aries_endorser_service"
version = "0.0.1"
description = "Hyperledger Aries Endorser Service is a controller for an Aries Cloudagent Python agent acting as endorser."
authors = ["Hyperledger Aries <aries@lists.hyperledger.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "endorser"}]
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: Apache Software License",
	        "Operating System :: OS Independent",
]
repository = "https://github.com/hyperledger/aries-endorser-service"


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.4"
alembic = "^1.7.5"
asyncpg = "^0.24.0"
fastapi = "^0.109.1"
httptools = "^0.3.0"
itsdangerous = "^2.0.1"
Jinja2 = "^3.1.3"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.2"
pydantic = "^1.10.13"
python-dotenv = "^0.19.2"
python-jose = {version = "^3.3.0", extras = ["cyptography"]}
python-multipart = "^0.0.7"
PyYAML = "^6.0"
requests = "^2.31.0"
sniffio = "^1.2.0"
SQLAlchemy = "^1.4.27"
sqlalchemy2-stubs = "^0.0.2a19"
sqlmodel = "~0.0.6"
starlette = "^0.35.1"
starlette-context = "^0.3.3"
uvicorn = "^0.17.0"
uvloop = "^0.16.0"
watchgod = "^0.7"
websockets = "^10.1"
Werkzeug = "^2.3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "~3.7.0"
# Sync with version in .pre-commit-config.yaml
ruff = "0.4.4"
# Sync with version in .github/workflows/blackformat.yml
# Sync with version in .pre-commit-config.yaml
black = "24.4.2"

# testing
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-ruff = "^0.3.2"
behave = "^1.2.6"


async-timeout = "^4.0.1"
attrs = "^21.4.0"
chardet = "^4.0.0"
distro = "^1.6.0"
docopt = "^0.6.2"
ecdsa = "^0.17.0"
exrex = "^0.10.5"
Faker = "^11.3.0"
iniconfig = "^1.1.1"
jsonschema = "^3.2.0"
paramiko = "^3.4.0"
py = "^1.11.0"
pyasn1 = "^0.4.8"
pydantic-factories = "^1.2.3"
PyNaCl = "^1.5.0"
pyparsing = "^3.0.7"
pyrsistent = "^0.18.1"
rfc3986 = "^1.5.0"
rsa = "^4.8"
texttable = "^1.6.4"
toml = "^0.10.2"
virtualenv = "^20.13.1"
websocket-client = "^0.59.0"
yarl = "^1.7.2"


[tool.poetry.extras]


[tool.poetry.scripts]
aca-py = "endorser.main:main"

[tool.ruff]
lint.select = ["B006", "C", "D", "E", "F"]

lint.ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "D417", "C901",
]

include = ["endorser/**/*.py"]

line-length = 90

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["B006", "D", "E501", "F841"]

[tool.pytest.ini_options]
testpaths = "endorser"
addopts = """
    --quiet --junitxml=./test-reports/junit.xml
    --cov-config .coveragerc --cov=endorser --cov-report term --cov-report xml
    --ruff
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning', # Ignore specific DeprecationWarning for old packages using distutils version class
]

[tool.coverage.run]

omit = [
    "*/tests/*",
    "demo/*",
    "docker/*",
    "docs/*",
    "scripts/*",
]
data_file = "test-reports/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"